<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.teamopendata.mindcareapp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_map"
        android:name="com.teamopendata.mindcareapp.ui.map.MapFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_map" />


    <fragment
        android:id="@+id/navigation_graph"
        android:name="com.teamopendata.mindcareapp.ui.graph.GraphFragment"
        android:label="@string/title_graph"
        tools:layout="@layout/fragment_graph" />

    <fragment
        android:id="@+id/navigation_records"
        android:name="com.teamopendata.mindcareapp.ui.records.fragment.RecordsFragment"
        android:label="@string/title_records"
        tools:layout="@layout/fragment_records" />
</navigation>
