<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_background"
    tools:context=".ui.map.MapFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="18dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:text="@string/map_title"
                android:textColor="#0920A1"
                android:textSize="30dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/questionButton"
                android:layout_width="0dp"
                android:layout_height="25dp"
                android:layout_weight="1"
                android:background="@drawable/iconquestioni"
                android:paddingRight="10dp" />

            <Button
                android:id="@+id/button1"
                android:layout_width="0dp"
                android:layout_height="25dp"
                android:layout_weight="1"
                android:background="@drawable/star"
                tools:ignore="DuplicateIds" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView4"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#0920A1"
            android:text="@string/map_sub_title" />

        <FrameLayout
            android:id="@+id/fl_map_container"
            android:layout_width="match_parent"
            android:layout_height="300dp">

        </FrameLayout>

        <TextView
            android:id="@+id/textView5"
            android:paddingTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#0920A1"
            android:textSize="20dp"
            android:textStyle="bold"
            android:text="@string/map_list" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager">
        </androidx.recyclerview.widget.RecyclerView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>