<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context=".ui.records.fragment.AddEditRecordFragment">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginHorizontal="16dp"
                android:scaleType="fitXY"
                android:src="@drawable/background_add_edit_record"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cv_record_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="24dp"
                android:clickable="true"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp"
                app:cardUseCompatPadding="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_record_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawablePadding="8dp"
                        android:padding="8dp"
                        android:text="@string/date_record"
                        android:textColor="@color/home_light"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:drawableStartCompat="@drawable/icon_calender_24dp" />


                    <TextView
                        android:id="@+id/tv_record_pick_date"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:hint="@string/select_date_record"
                        android:textColor="@android:color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cv_record_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp"
                app:cardUseCompatPadding="true"
                app:layout_constraintEnd_toEndOf="@+id/cv_record_date"
                app:layout_constraintStart_toStartOf="@+id/cv_record_date"
                app:layout_constraintTop_toBottomOf="@+id/cv_record_date">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_record_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawablePadding="8dp"
                        android:padding="8dp"
                        android:text="@string/title_record"
                        android:textColor="@color/home_light"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:drawableStartCompat="@drawable/icon_title_24dp" />


                    <EditText
                        android:id="@+id/et_record_title"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:autofillHints="title"
                        android:background="@null"
                        android:ellipsize="end"
                        android:gravity="center"
                        android:hint="@string/enter_title_record"
                        android:maxLines="1"
                        android:minHeight="40dp"
                        android:textColor="@android:color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <include
                android:id="@+id/include_rv"
                layout="@layout/layout_record_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@+id/cv_record_title" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_record_save"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginBottom="8dp"
                android:text="@string/save_record"
                android:textColor="@color/records_dark"
                android:textStyle="bold"
                app:cornerRadius="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/include_rv"
                app:layout_constraintTop_toBottomOf="@+id/include_rv"
                app:strokeColor="@color/records_dark" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</layout>