<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.records.fragment.AddRecordFragment">

            <LinearLayout
                android:id="@+id/cl_record_date_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:background="@drawable/border_round_rectangle_light"
                android:elevation="2dp"
                android:orientation="horizontal"
                android:padding="3dp"
                app:layout_constraintBottom_toTopOf="@+id/cl_record_title_container"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <TextView
                    android:id="@+id/tv_record_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/fill_round_rectangle_light"
                    android:drawablePadding="4dp"
                    android:padding="8dp"
                    android:text="@string/date_record"
                    android:textColor="@color/home_light"
                    android:textSize="20sp"
                    app:drawableStartCompat="@drawable/icon_calender_24dp" />

                <TextView
                    android:id="@+id/tv_record_pick_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text=""
                    android:hint="날짜 선택"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/cl_record_title_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/border_round_rectangle_light"
                android:elevation="2dp"
                android:orientation="horizontal"
                android:padding="3dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cl_record_date_container">


                <TextView
                    android:id="@+id/tv_record_title"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@drawable/fill_round_rectangle_light"
                    android:drawablePadding="4dp"

                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/title_record"
                    android:textColor="@color/home_light"
                    android:textSize="20sp"
                    app:drawableStartCompat="@drawable/icon_title_24dp" />

                <EditText
                    android:id="@+id/et_record_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:autofillHints="title"
                    android:background="@null"
                    android:gravity="center"
                    android:minHeight="40dp"
                    android:text=""
                    android:hint="기록 제목 입력"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <include
                android:id="@+id/include_rv"
                layout="@layout/layout_record_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="@+id/cl_record_title_container"
                app:layout_constraintStart_toStartOf="@+id/cl_record_title_container"
                app:layout_constraintTop_toBottomOf="@+id/cl_record_title_container" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_record_save"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/save_record"
                app:cornerRadius="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/include_rv"
                app:layout_constraintTop_toBottomOf="@+id/include_rv"
                app:strokeColor="@color/records_dark" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</layout>